# financial-qa-benchmark

./: .gitignore  Makefile  README.md  bertscore.py  config.py  config.yaml  dataset.py  evaluate.py  logger.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt
outputs/: bertscore_results.csv  comparison_summary.csv  evaluation_gemini_25_flash_lite.jsonl  evaluation_gpt4o_mini.jsonl  predictions_gemini_25_flash_lite.jsonl  predictions_gpt4o_mini.jsonl
